--- a/index.html
+++ b/index.html
@@ -7,3 +7,27 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./JavaScript/script.js" defer></script>
     <script src="./JavaScript/questions.js" defer></script>
+</head>
+    <body>
+  <div class="beginBtn">
+    <button>Begin</button>
+  </div>
+  <div class="ruleContainer">
+    <div class="ruleTitle">
+      <p>Some Rules of this Quiz</p>
+    </div>
+    <div class="ruleList">
+      <p>
+        Each question will give you multiple answer choices. Only one answer
+        choice is correct! When you get a question right, you will get to move
+        on with no penelty. The score at the end will be displayed to see how
+        many answers you got right. Are you ready?
+      </p>
+    </div>
+    <div class="workingBtn">
+      <button class="quitBtn">Exit</button>
+      <button class="restartBtn">Continue</button>
+    </div>
+  </div>
+    </body>
+</head>
