--- a/index.html
+++ b/index.html
@@ -29,5 +29,19 @@
       <button class="restartBtn">Continue</button>
     </div>
   </div>
+  <div class="quizContainer">
+    <header>
+      <div class="quizHeading">Javascript Quiz</div>
+      <div class="timerContainer">
+        <div class="timeLeft">Time Left</div>
+        <div class="timeSeconds">GO</div>
+      </div>
+      <div class="timeDisplay"></div>
+    </header>
+    <div class="questionContainer">
+      <div class="questionMain"></div>
+      <div class="optionChoices"></div>
+    </div>
+  </div>
     </body>
 </head>
